--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,9 @@ dependencies:
     sdk: flutter
   auto_size_text: ^2.1.0
   cached_network_image: ^3.0.0
-  carousel_slider: ^4.0.0
   flutter_staggered_animations: ^1.0.0
   get: ^4.1.4
+  shimmer: ^2.0.0
   simple_animations: ^1.3.6
   sliding_sheet: ^0.5.0
 
