--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   cached_network_image: ^3.0.0
   flutter_staggered_animations: ^1.0.0
   get: ^4.1.4
-  shimmer: ^2.0.0
+  md2_tab_indicator: ^1.0.2
   simple_animations: ^1.3.6
   sliding_sheet: ^0.5.0
 
@@ -27,6 +27,8 @@ flutter:
   assets:
     - assets/images/pokeball.png
     - assets/images/pokeball_dark.png
+    - assets/images/egg.png
+    - assets/gifs/gif_poke.gif
   fonts:
     - family: Google
       fonts:
