--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,16 @@ dependencies:
     sdk: flutter
   auto_size_text: ^2.1.0
   cached_network_image: ^3.0.0
+  flutter_launcher_icons: ^0.9.0
   flutter_staggered_animations: ^1.0.0
   get: ^4.1.4
   md2_tab_indicator: ^1.0.2
   simple_animations: ^1.3.6
   sliding_sheet: ^0.5.0
+
+flutter_icons:
+  image_path: 'assets/icon/icon.png'  
+  android: true
 
 dev_dependencies:
   flutter_test:
